--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ aiomysql = "^0.2.0"
 pytest-asyncio = "^0.24.0"
 aiosqlite = "^0.20.0"
 httpx = "^0.27.2"
+ruff = "^0.6.5"
 
 [build-system]
 requires = ["poetry-core"]
