fix: 複数の微修正

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - 8000:8000
     environment:
       - WATCHFILES_FORCE_POLLING=true
+    depends_on:
+      - db
   db:
     image: mysql:8.0
     platform: linux/x86_64
